# quantum-jam-chirimbolo

./: README.md  bb84.ipynb  main.py  pyproject.toml
src/: __init__.py  bb84_protocol.py  error_correction.py  noise.py  notebook_utils.py  privacy.py  test.py
tests/: test_bb84_protocol.py  test_error_correction.py  test_noise.py  test_privacy.py
