[project]
name = "quantum-jam-chirimbolo"
version = "0.1.0"
description = "BB84 Quantum Key Distribution Protocol Simulation using Qiskit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "qiskit[visualization]>=2.2.3",
    "qiskit-ibm-runtime>=0.43.1",
    "qiskit-aer>=0.17.2",
    "ipywidgets>=8.1.7",
]
